usfm_parser/tests/snapshots/tcdocs__paratextTests_NestingUnclosed.snap
---
source: usfm_parser/tests/snapshot.rs
description: "\\id GEN\r\n\\ib\r\n\\ip Hi mom.\r\n\\c 1\r\n\\p \\v 1 Hi \\em Mr. \\+nd Bob\\em*.\r\n\\p And\\f + \\fr 1.1 \\ft stuff\\f*\r\n\\b\r\n"
---
Book GEN "" @0..7
Para ib@9..14
Para ip@14..27
  Text "Hi mom."@18..27
ChapterStart 1@27..31
Para p@33..67
  VerseStart 1@36..40
  Text "Hi "@41..44
  Char em@44..64
    Text "Mr. "@48..52
    Char nd@52..64
      Text "Bob"@57..60
  Text "."@64..67
Para p@67..100
  Text "And"@70..73
  Note f caller=+@73..98
    Char fr@78..86
      Text "1.1 "@82..86
    Char ft@86..98
      Text "stuff"@90..95
  VerseEnd 1
Para b@100..104
ChapterEnd 1
--- diagnostics
warning[character-style-not-closed] @52..56: `\nd` was closed by `\em*` instead of `\nd*`
