usfm_parser/tests/snapshots/tcdocs__special-cases_notes2.snap
---
source: usfm_parser/tests/snapshot.rs
description: "\\id GEN\n\\c 1\n\\p\n\\v 6 जब अम्मोनियों ने देखा, कि हम दाऊद को घिनौने लगते हैं, तब हानून और अम्मोनियों ने \\it एक हजार किक्कार चाँदी\\f + \\fr 19.6 \\fq एक हजार किक्कार चाँदी: \\ft उस समय पश्चिमी आसिया में सैनिकों को किराए पर लेने का प्रचलन था। \\f*\\it*, अरम्नहरैम और अरम्माका और सोबा को भेजी, कि रथ और सवार किराये पर बुलाए।"
snapshot_kind: text
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..721
  VerseStart 6@16..20
  Text "जब अम\u{94d}मोनियो\u{902} न\u{947} द\u{947}खा, कि हम दाऊद को घिनौन\u{947} लगत\u{947} ह\u{948}\u{902}, तब हान\u{942}न और अम\u{94d}मोनियो\u{902} न\u{947} "@21..225
  Char it@225..540
    Text "एक हजार किक\u{94d}कार चा\u{901}दी"@229..286
    Note f caller=+@286..536
      Char fr@291..300
        Text "19.6 "@295..300
      Char fq@300..363
        Text "एक हजार किक\u{94d}कार चा\u{901}दी: "@304..363
      Char ft@363..536
        Text "उस समय पश\u{94d}चिमी आसिया म\u{947}\u{902} स\u{948}निको\u{902} को किराए पर ल\u{947}न\u{947} का प\u{94d}रचलन था। "@367..533
  Text ", अरम\u{94d}नहर\u{948}म और अरम\u{94d}माका और सोबा को भ\u{947}जी, कि रथ और सवार किराय\u{947} पर ब\u{941}लाए।"@540..721
  VerseEnd 6
ChapterEnd 1
